Kubernetes-notes/07.Service/ingress/03.nbvhr/manifest/deploy-2.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app2-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: 230882/app2-cpbr:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app2-service 
spec:
  type: NodePort
  selector:
    app: app2
  ports:
  - port: 80
    targetPort: 80
