Kubernetes-notes/07.Service/ingress/03.nbvhr/manifest/deploy-default.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app3-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
      - name: app2
        image: 230882/default-cpbr:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: default-service 
spec:
  type: NodePort
  selector:
    app: app3
  ports:
  - port: 80
    targetPort: 80
